--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^0.1.1",
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/google-signin": "^3.0.4",
     "@react-native-community/masked-view": "^0.1.6",
@@ -60,7 +61,8 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-reset": "^0.3.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "rn-range-slider": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
