--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@invertase/react-native-apple-authentication": "^0.1.1",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-community/async-storage": "^1.7.1",
+    "@react-native-community/blur": "^3.6.0",
     "@react-native-community/google-signin": "^3.0.4",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-native-community/netinfo": "^5.3.3",
@@ -39,6 +40,7 @@
     "react-native-image-view": "^2.1.9",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "^1.3.3",
+    "react-native-material-textfield": "github:n4kz/react-native-material-textfield#729008b847eb38129d0b886e98253d4c11f6d4d3",
     "react-native-modal": "^11.5.4",
     "react-native-orientation": "^3.1.3",
     "react-native-reanimated": "^1.7.0",
