--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,6 @@ DerivedData
 
 # Android/IntelliJ
 #
-build/
 .idea
 .gradle
 local.properties
@@ -57,3 +56,4 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
+*.apk
